--- a/syn-refinements/p.tex
+++ b/syn-refinements/p.tex
@@ -4,8 +4,12 @@
 \usepackage[11pt,nocopyright]{sigmin}
 \usepackage[square,comma,numbers,sort&compress]{natbib}
 
+
+
 % common packages
 \include{pkgs}
+% \include{ocaml}
+\include{haskellListings}
 
 \newcommand{\sys}{\mbox{\textsc{Reckon}}\xspace}
 
