--- a/draft/cmds.tex
+++ b/draft/cmds.tex
@@ -93,10 +93,10 @@
 %%   (e.g., \protect\C{1})
 %%
 \usepackage{tikz}
-\newcommand*\C[1]{%
-\begin{tikzpicture}[baseline=(C.base)]
-\node[draw,circle,inner sep=0.2pt](C) {#1};
-\end{tikzpicture}}
+% \newcommand*\C[1]{%
+% \begin{tikzpicture}[baseline=(C.base)]
+% \node[draw,circle,inner sep=0.2pt](C) {#1};
+% \end{tikzpicture}}
 
 \newcommand*\BC[1]{%
 \begin{tikzpicture}[baseline=(C.base)]
