--- a/draft/std.tex
+++ b/draft/std.tex
@@ -27,7 +27,7 @@
 
 \newcommand{\disjunion}{ \dot{\cup} }
 
-\newcommand{\domain}{\mathsf{Dom}}
+\newcommand{\domain}{D}
 
 \newcommand{\elts}[1]{\{ #1 \}}
 
