--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -139,6 +139,12 @@
 
 \newcommand{\judges}{\vdash}
 
+\newcommand{\leftchild}{l}
+
+\newcommand{\leftopchild}{l_{\oplus}}
+
+\newcommand{\letexp}[4]{\cc{let (} #1 \cc{,} #2 \cc{)=} #3 \cc{ in } #4}
+
 \newcommand{\nilrel}{\mathsf{NilRel}}
 
 \newcommand{\nodes}[1]{\mathsf{Nodes}[ #1 ]}
@@ -151,11 +157,19 @@
 
 \newcommand{\orsub}{\mathsf{OrSub}}
 
+\newcommand{\pair}[2]{\cc{(} #1 \cc{,} #2 \cc{)} }
+
 \newcommand{\renameclauses}[3]{\mathsf{Rename}[ #1, #2, #3 ]}
 
 \newcommand{\renamesub}[4]{\mathsf{Rename}[ #1, #2, #3, #4 ]}
 
+\newcommand{\restypes}{T}
+
+\newcommand{\rightchild}{r}
+
 \newcommand{\subtype}{\preceq}
+
+\newcommand{\posexps}{\mathsf{Exps}}
 
 \newcommand{\prevrule}[1]{\mathsf{Prev}[ #1 ]}
 
@@ -182,6 +196,8 @@
 \newcommand{\reltypestypes}[1]{\mathsf{RelTypes}[ #1 ]}
 
 \newcommand{\resvar}[1]{\nu[ #1 ]}
+
+\newcommand{\rightopchild}{r_{\oplus}}
 
 \newcommand{\rulexts}{\mathsf{RuleExts}}
 
@@ -235,9 +251,13 @@
 
 \newcommand{\tilings}[2]{\mathsf{Tilings}[ #1, #2 ]}
 
+\newcommand{\typarampos}{\alpha}
+
 \newcommand{\typepos}{\mathsf{TypePos}}
 
 \newcommand{\types}{\mathsf{Types}}
+
+\newcommand{\tyrespos}{\nu}
 
 \newcommand{\unfoldings}[1]{\mathsf{Unfoldings}[ #1 ]}
 
