inference rules: first cut

--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -143,11 +143,11 @@
 
 \newcommand{\judges}{\vdash}
 
-\newcommand{\leftchild}{l}
+\newcommand{\leftchild}{\mathsf{l}}
 
-\newcommand{\leftopchild}{l_{\oplus}}
+\newcommand{\leftopchild}{\mathsf{l}_{\oplus}}
 
-\newcommand{\letexp}[4]{\cc{let (} #1 \cc{,} #2 \cc{)=} #3 \cc{ in } #4}
+\newcommand{\letexp}[4]{\cc{let(} #1 \cc{,} #2 \cc{)=} #3 \cc{ in } #4}
 
 \newcommand{\matchexp}[5]{\cc{match } #1 \cc{ with } #2 \cc{->} #3 \cc{|} #4 \cc{->} #5}
 
@@ -171,7 +171,7 @@
 
 \newcommand{\restypes}{T}
 
-\newcommand{\rightchild}{r}
+\newcommand{\rightchild}{\mathsf{r}}
 
 \newcommand{\subtype}{\preceq}
 
@@ -203,7 +203,7 @@
 
 \newcommand{\resvar}[1]{\nu[ #1 ]}
 
-\newcommand{\rightopchild}{r_{\oplus}}
+\newcommand{\rightopchild}{\mathsf{r}_{\oplus}}
 
 \newcommand{\rulexts}{\mathsf{RuleExts}}
 
