--- a/draft/approach.tex
+++ b/draft/approach.tex
@@ -41,6 +41,9 @@ types.
 \BH{define result relational type: base symbols are expression
   positions}
 
+\subsubsection{Operations over relational types}
+\label{sec:rel-type-space}
+
 \subsubsection{A relational type system}
 \label{sec:rel-type-sys}
 
@@ -48,36 +51,35 @@ types.
 \begin{figure}
   \centering
   \begin{gather*}
+    % empty:
+    \inference[ EMPTY ]{ }{
+      % the empty map of expressions has relational type true
+      \Gamma \judges \emptyset : \emptyset } \qquad
     % vars:
-    \inference[ VARS ]{ %
-      \cc{x} \in \domain(\Gamma) }{ %
+    \inference[ VARS ]{ }{ %
       \Gamma \judges P \mapsto X : %
-      \Gamma(\cc{x})[ X = P ] } \qquad
+      \Gamma(x)[ X \mapsto P ] } \\
     % constant:
     \inference[ CONST ]{ %
       % remainder has type tau,
-      \Gamma \judges E : \tau & %
-      % tau is subtype under constraint that p is c
-      \tau \subtype_{ p = \cc{c} } \tau' }{ %
-      \Gamma \judges \upd{ E }{ p }{ \cc{c} } : \tau' } \\
+      \Gamma \judges E : \tau }{ %
+      \Gamma \judges \upd{ E }{ p }{ c } : \tau \joinctr_p (p = c) } \qquad
     % base operation:
     \inference[ OP ]{ %
       % remainder has type tau,
       \Gamma \judges %
-      \upd{ E }{ \leftopchild \cons p, %
-        \rightopchild \cons p}{ %
-        e_0, e_1 } : \tau \\ %
-      % tau is subtype under constraint that p is c
-      \tau \subtype_{ p = \leftopchild \cons p \oplus \rightopchild \cons p }^{ \leftopchild \cons p, \rightopchild \cons p}
-      \tau' }{ %
-      \Gamma \judges \upd{ E }{ p }{ e_0 \oplus e_1 } : \tau' } \qquad
+      \upd{ E }{ \leftopchild \cons p, \rightopchild \cons p}{ %
+        e_0, e_1 } : \tau }{ %
+      \Gamma \judges \upd{ E }{ p }{ e_0 \oplus e_1 } : %
+      \tau \joinctr_p %
+      (p = \leftopchild \cons p \oplus \rightopchild \cons p) } \\
     % abstraction:
     \inference[ ABS ]{ 
       % extend the context and typecheck the body,
       \Gamma, x : \tau \judges \upd{ E }{ p }{ e } : \tau' }{ %
       % type of abstraction is
       \Gamma \judges \upd{ E }{ p }{ \lambda x. e } : %
-      \tau \to_p \tau' } \\
+      \tau \to_p \tau' } \qquad
     % application:
     \inference[ APP ]{ %
       % get type of abstraction,
@@ -85,30 +87,31 @@ types.
       % get type of argument that is the parameter type,
       \Gamma \judges \upd{E}{p}{e_1} : \tau }{
       % return the result type
-      \Gamma \judges \upd{ E }{ p }{e_0\ e_1} : \tau' } \qquad
+      \Gamma \judges \upd{ E }{ p }{e_0\ e_1} : \tau' } \\
     % pairing:
     \inference[ PAIR ]{
       % get type of both expressions,
       \Gamma \judges %
       \upd{E}{\leftchild \cons p, \rightchild \cons p}{ e_0, e_1 } : %
       \tau }{ % then type of pair is
-      \Gamma \judges \upd{E}{p}{ \pair{e_0}{e_1} } : \times_p \tau } \\
+      \Gamma \judges \upd{E}{p}{ \pair{e_0}{e_1} } : \times_p \tau } \qquad
     % let:
     \inference[ LET ]{
       % get type of bound expression,
       \Gamma \judges \upd{ E }{p}{ e_0 } : \times_p \tau \\
       % get type of result under context that binds to x and y,
-      \Gamma, \cc{x}, \cc{y} : %
-      \replace{ \tau }{ l \cons p, r \cons p }{\cc{x}, \cc{y}} \judges %
+      \Gamma, x, y : %
+      \replace{ \tau }{ %
+        \leftchild \cons p, \rightchild \cons p }{ x, y } \judges %
       e_1 : \tau' }{
       % then complete let expression has type
-      \Gamma \judges \upd{E}{p}{ \letexp{x}{y}{e_0}{e_1} } : \tau'' } \qquad
+      \Gamma \judges \upd{E}{p}{ \letexp{x}{y}{e_0}{e_1} } : \tau' } \\
     % left injection:
     \inference[ LEFT ]{
       % get type of the nested exp,
       \Gamma \judges \upd{E}{p}{ e } : \tau }{
       % lift type at the left to sum,
-      \Gamma \judges \upd{E}{p}{ \injl\ e} : \tau +_p \tau' } \\
+      \Gamma \judges \upd{E}{p}{ \injl\ e} : \tau +_p \tau' } \qquad
     % right injection:
     \inference[ RIGHT ]{
       % get type of the nested exp,
@@ -128,44 +131,44 @@ types.
       % then type of match exp is type of both branches,
       \Gamma \judges %
       \upd{E}{p}{ \matchexp{e_0}{\cc{x}}{e_1}{\cc{y}}{e_2} } : %
-      \tau''
-    }
+      \tau'' } \qquad
     % fixpoint:
     \inference[ FIX ]{
       % get type of body under context that binds symbol to tau,
       \Gamma, f : \tau \judges \upd{ E }{ p }{ e } : \tau' \\
       % constrain that tau' with result renamed to f is subtype of tau,
-      \replace{ \tau' }{ p }{ f } \subtype \tau
-    }{ %
+      \replace{ \tau' }{ p }{ f } \subtype \tau }{ %
       \Gamma \judges \upd{ E }{ p }{ \fix{f}{e} }: \tau' } \\
     % unfold:
     \inference[ UNFOLD ]{
       % if expressions have tau unfolded at p,
-      \Gamma \judges E : \unfold{\tau}{p} }{ 
+      \Gamma \judges E : \unfold{\tau}{(p, q)} }{ 
       % then expressions have folded type
-      \Gamma \judges E : \tau }
+      \Gamma \judges E : \tau } \qquad
     % subtype:
     \inference[ SUB ]{
       % if expressions have tau,
-      \Gamma \judges E : \tau \\
+      \Gamma \judges E : \tau &
       % and tau subtypes tau',
       \tau \subtype \tau' }{ %
       % then expressions have type tau'
       \Gamma \judges E : \tau' }
   \end{gather*}
-  \caption{A proof system for relational types.
+  \caption{A typing system for relational types.
     %
-    \BH{update}
-    %
-    Metavariable $c$ ranges over $\const$, %
-    $x$ ranges over $\vars$, %
-    $f$ ranges over $\vars$, %
-    $e$ ranges over $\expr$, %
-    $\tau$ ranges over $\reltypes$, and %
-    $\Gamma$ ranges over $\ctxs$. }
+    Metavariable %
+    $\Gamma$ ranges over constants, %
+    $E$ ranges over positional expressions, %
+    $p$ ranges over expression positions, %
+    $e$ ranges over expressions, %
+    $\tau$ ranges over relational types, %
+    $P$ ranges over sequences of expression positions, %
+    $X$ ranges over sequences of program variables, %
+    $c$ ranges over constants, %
+    $x$, $y$, and $f$ range over program variables, and %
+    $q$ ranges over type positions.}
   \label{fig:reltypes-rules}
 \end{figure}
-
 
       % % extend assumed type at p and rebind to position
       % \typarampos \cons_p \replace{ \tau }{ x }{ p } \union
@@ -173,85 +176,11 @@ types.
       % \tyrespos \cons_p \tau' 
     
 % define judgment:
-We now define a typing system that assigns indexed expressions to
-result relational types.
-%
-For $E \in \posexps$, $\tau \in \restypes$, and $\Gamma \in \ctxs$,
-the fact that $E$ has $\tau$ under $\Gamma$ is denoted
-$\Gamma \judges E : \tau$.
-
-% walk through the inference rules:
-The typing relation is inductively defined by a finite set of
-inference rules, a selection of which are given in
-\autoref{fig:reltypes-rules}.
-%
-Each rule partially defines the typing relation over positional
-expressions $E$ based on the structure of an arbitrary binding in $E$.
-
-Relational types are associated with sets of program expressions to
-prove that the expressions satisfy relational properties.
-%
-\autoref{fig:reltypes-rules} contains a set of inference rules that
-define a proof system for establishing that a set of expressions has a
-relational type.
-%
-For $\Gamma, \tau \in \reltypes$ and $E \subseteq \expr$, the fact
-that under $\Gamma$, $E$ has type $\tau$ is denoted $\Gamma \judges E
-: \tau$.
-
-\BH{walk through typing rules}
-%
-\BH{fix arbitrary elements}
-% const:
-By Rule~CONST, if $E \subseteq \expr$ have $\tau \in \reltypes$ under
-$\Gamma$, then for $c \in \const$, $\add{E}{c}$ has $\tau$ joined with
-the first-order constraint $\resvar{c} = c$.
-% var:
-By Rule~VAR, if $E$ have $\tau$ under $\Gamma$, then $\add{E}{x}$ has
-$\tau$ joined with the equivalence type $\resvar{x} = x$.
-% operation:
-By Rule~OP, if $\elts{ e_0, e_1 } \union E$ have type $\tau$ under
-$\Gamma$, then $\add{ E }{ e_0 \oplus e_1 }$ have type $\tau$ joined
-with the first-order constraint that $\resvar{e} = \resvar{e_0} \oplus
-\resvar{e_1}$.
-% if-then-else:
-By Rule~ITE, if $\elts{ e_0, e_1, e_2 } \union E$ have type $\tau$
-under $\Gamma$, then $\add { \ite{ e_0 }{ e_1 }{ e_2 } }{ E }$ have
-type $\tau$ joined with the disjunction of \textbf{(1)} the
-conjunction of the first-order constraint $\resvar{e_0} = \true$ and
-the equivalence type $\resvar{e} \equiv \resvar{e_1}$ and %
-\textbf{(2)} the conjunction of the first-order constraint
-$\resvar{e_1} = \false$ and the equivalence type $\resvar{e} \equiv
-\resvar{e_2}$.
-
-% abstraction:
-By Rule~ABS, if $\add{ e' }{ E }$ have type $\tau'$ under context
-$\Gamma$ extended with type $\tau$ (that is potentially defined over
-$x$), then $\add{ \lambda x.\ e' }{ E }$ have type $\tau \rightarrow
-\tau'$ joined with a type equating the parameter type of $\lambda
-x. e'$ with $x$.
-% application:
-By Rule~APP, if $\elts{ e_0, e_1 } \union E$ have type $\tau$ under
-$\Gamma$, then under $\Gamma$, $\add{ e_0\ e_1 }{ E }$ have type
-$\tau$ conjoined with %
-\textbf{(1)} a type equating the parameter symbol of $e_0$ with the
-result symbol of $e_1$ and %
-\textbf{(2)} a type equating the result symbol of $e_0$ with the
-result symbol of $e_0\ e_1$.
-% fixpoint:
-By Rule~FIX, if under $\Gamma$ extended with $\tau$ (which may be
-defined over symbol $f$), $\add{ e' }{ E }$ have type $\tau$, then
-under $\Gamma$, $\add{ \fix{ f }{ e' } }{ E }$ have type $\tau$
-conjoined with a type equating the result of $e$ with $f$.
-
-% non-syntax-guided rules:
-By Rule~EMPTY, under $\Gamma$, the empty set of expressions has type
-$\Gamma$.
-%
-By Rule~SUB, under $\Gamma$, if $E$ have type $\tau$ a subtype of
-$\tau'$, then under $\Gamma$, $E$ have type $\tau'$.
+\BH{walk through the rules}
 
 % types as proving equivalence:
+\BH{deprecated}
+
 \BH{state main soundness result}
 % 
 \sys, given programs $P_0$ and $P_1$, attempts to synthesize a proof
